--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>SBI - Digital Onboarding</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/build/main.css" />
-    <script src="/build/bundle.js"></script>
+    <link rel="stylesheet" href="./build/main.css" />
+    <script src="./build/bundle.js"></script>
 </head>
   <body>
     <!-- Header with Logo -->
