path correction in image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <h2 class="do-reward-header-text col-md-4 offset-2">Let’s get you onboarded!</h2>
                 <div class=" col-md-3 offset-1">
                     <div class="do-reward-card">
-                        <span class="reward-star"><img src="/assets/icons/star.svg" alt=""></span>
+                        <span class="reward-star"><img src="./assets/icons/star.svg" alt=""></span>
                         <span class="reward-number" id="reward-number">0</span>
                         reward points
                     </div>
