add error text on card

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
                                 I have read and understood fraud awareness and prevention.
                             </label>
                         </div>
-                        <div class="section-col-3 align-bottom">
+                        <div class="section-col-3 align-bottom relative">
+                            <span class="card-error-text">It is important to
+                                    keep your CVV
+                                    confidential. </span>
                             <img src="./assets/images/card.svg" alt="">
                         </div>
                     </div>
