bug fixes for mobile

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <img  class="col-md-2" src="./assets/images/marginalia-payment-processed-copy.png" alt="" />
                 <h2 class="do-reward-header-text col-md-4 offset-2">Let’s get you onboarded!</h2>
                 <div class=" col-md-3 offset-1 reward-points">
+                    <span class="reward-points-subtext">You have</span>
                     <div class="do-reward-card">
                         <span class="reward-star"><img src="./assets/icons/star.svg" alt=""></span>
                         <span class="reward-number" id="reward-number">0</span>
@@ -72,11 +73,11 @@
                                 I have read and understood fraud awareness and prevention.
                             </label>
                         </div>
-                        <div class="section-col-3 align-bottom relative">
+                        <div class="section-col-3 align-bottom space-top-40 relative">
                             <span class="card-error-text">It is important to
                                     keep your CVV
                                     confidential. </span>
-                            <img src="./assets/images/card.svg" alt="">
+                            <img class="full-width-sm" src="./assets/images/card.svg" alt="">
                         </div>
                     </div>
                     <div class="do-button-group space-top vertical-sm">
