--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
             <div id="welcome" class="modal " role="dialog" >
                 <div class="modal-body text-center">
                     <img src="./assets/images/marginalia-payment-processed-copy.png" alt="">
-                    <h2 class="modal-heading">Hi Vikramaditya! Welcome to SBI Card</h2>
+                    <h2 class="modal-heading">Hi Vikramaditya! <br> Welcome to SBI Card</h2>
                     <p  class="modal-content">Get onboarded with us and earn upto 200 reward points.
                             Redeem these rewards for a host of gift items and gift vouchers for yourself and your family.
                     </p> 
