bug fixes sbi logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- Header with Logo -->
     <header class="do-header do-wrapper">
-      <img src="" alt="" />
+      <img src="./assets/images/sbi_logo_2x.jpg" alt="" />
     </header>
 
     <!-- Sub Header showing reward points -->
@@ -73,7 +73,7 @@
                                 I have read and understood fraud awareness and prevention.
                             </label>
                         </div>
-                        <div class="section-col-3 align-bottom space-top-40 relative">
+                        <div class="section-col-3 align-bottom space-top-30 relative">
                             <span class="card-error-text">It is important to
                                     keep your CVV
                                     confidential. </span>
