--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="do-reward-header">
         <div class="do-wrapper">
             <div class="row flex-ac flex">
-                <img  class="col-md-2" src="./assets/images/marginalia-payment-processed-copy.png" alt="" />
+                <img  class="col-md-2" src="./assets/images/header_image_1x.png" alt="" />
                 <h2 class="do-reward-header-text col-md-4 offset-2">Let’s get you onboarded!</h2>
                 <div class=" col-md-3 offset-1 reward-points">
                     <span class="reward-points-subtext">You have</span>
@@ -315,7 +315,7 @@
                     <div class="flex flex-ac flex-jc flex-col">
                         <a href="#knowMore" class="underlined">Know more</a>
                         <button class="do-button primary button-modal-space" onClick="window.location.hash = ''" id="onboarded-button">Get Onboarded</button>
-                        <a href="" class="underlined">Skip for now</a>
+                        <a href="#skipOnboarding" class="underlined">Skip for now</a>
                     </div>
                 </div>
             </div>
@@ -349,7 +349,7 @@
                     </p>
                     <div class="flex flex-ac flex-jc flex-col space-top-40">
                         <button class="do-button primary" onClick="window.location.hash = ''"  id="onboarded-button">Get Onboarded</button>
-                        <a href="" class="underlined">Skip for now</a>
+                        <a href="#skipOnboarding" class="underlined">Skip for now</a>
                     </div>
                 </div>
             </div>
@@ -357,7 +357,7 @@
 
             <div id="skipOnboarding" class="modal " role="dialog" >
                     <div class="modal-body text-center">
-                            <img src="./assets/images/marginalia-payment-processed-copy.png" alt="">
+                            <img src="./assets/images/leaving_1x.png"  alt="">
                   
                     <h2 class="modal-heading subheading">Leaving Already?</h2>
                     <p  class="modal-content ">
