added unminified js

--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
                             </label>
                         </div>
                         <div class="section-col-3 align-bottom space-top-30 relative">
-                            <span class="card-error-text">It is important to
-                                    keep your CVV
-                                    confidential. </span>
-                            <img class="full-width" src="./assets/images/card.svg" alt="">
+                            <div class="full-width">
+                                <span class="card-error-text">It is important to
+                                        keep your CVV
+                                        confidential. </span>
+                                <img class="full-width" src="./assets/images/card.svg" alt="">
+                            </div>
                         </div>
                     </div>
                     <div class="do-button-group space-top vertical-sm">
@@ -303,6 +305,8 @@
                     </p>
                 </div>
             </section>
+            <p class="text-center noMargin skip-link-mobile sm-visible"><a href="#skipOnboarding" class="underlined">Skip for now</a></p>
+
             <!-- Modals -->
 
             <!-- Welcome Modal -->
