--- a/index.html
+++ b/index.html
@@ -580,9 +580,9 @@
             </div>
     <script  type="text/javascript" src="./build/bundle.js"></script>
     <script>
-        // (function(){
-        //     window.location.hash = "#welcome"
-        // }())
+        (function(){
+            window.location.hash = "#welcome"
+        }())
     </script>
   </body>
 </html>
