--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 </head>
   <body>
     <!-- Header with Logo -->
-    <header class="do-header do-wrapper">
+    <header class="do-header do-wrapper flex flex-ac flex-sb">
       <img src="./assets/images/sbi_logo_2x.jpg" alt="" />
+                        <!-- <p class="text-right noMargin skip-link sm-hidden"><a href="#skipOnboarding" class="underlined">Skip onboarding for now</a></p> -->
+      <a href="#skipOnboarding" class="underlined flex flex-ac" style="line-height: 20px;">
+        <img src="./assets/icons/cross.svg" alt="" style="padding-right:10px;">  
+        Skip onboarding for now</a>
     </header>
 
     <!-- Sub Header showing reward points -->
@@ -79,7 +83,7 @@
                                 <span class="card-error-text">It is important to
                                         keep your CVV
                                         confidential. </span>
-                                <img class="full-width" src="./assets/images/card.svg" alt="">
+                                <img class="full-width" src="./assets/images/card.png" alt="">
                             </div>
                         </div>
                     </div>
